--- a/new webUI/js_libs/style.css
+++ b/new webUI/js_libs/style.css
@@ -1,15 +1,25 @@
 body {
   font-family: 'Rosario', sans-serif;
 }
+
 circle.node {
   cursor: pointer;
   stroke: #000;
   stroke-width: .5px;
 }
 
-.visualization{
- margin-top: -14%;
-  
+.firstrow {
+  padding: 20px 0;
+  margin-top: 1%;
+  margin-bottom: 5%;
+}
+
+.visualization {
+ position: absolute;
+    /*right: 0;
+    top: 3%;*/
+        right: 4%;
+    top: 11%;
 }
 
 circle.node.directory {
@@ -39,7 +49,6 @@ body {
   padding-right: 25px;
 }
 
-
 .succeed_icon {
   display: none;
   font-size: 100px;
@@ -50,53 +59,70 @@ body {
   width: 0px !important;
 }
 
+
 /*.pic_location {
   width: 100px;
   border-radius: 45px;
 }*/
+
 #result {
   font-size: 50px;
 }
 
 .pic_location {
-    border-radius: 21px;
-    position: absolute;
-    right: 10px;
-    height: 94px;
-    top: 183px;
+  border-radius: 21px;
+  position: absolute;
+  right: 10px;
+  height: 94px;
+  top: 183px;
 }
+
+
 /*.container {*/
-  /*margin-top: 100px;*/
+
+
+/*margin-top: 100px;*/
+
+
 /*  height: 100px;
   //clear: both;
   text-align: left;*/
-  /*padding-top:80px;*/
-  /*margin-top:-60px;*/
+
+
+/*padding-top:80px;*/
+
+
+/*margin-top:-60px;*/
+
+
 /*}*/
 
 .alert {
   margin-bottom: 0px;
-  top:20px;
+  top: 20px;
   height: 100px;
   width: 600px;
   display: inline-block;
 }
+
 .succeed_icon {
   font-size: 80px;
-// top:20px;
+  // top:20px;
   height: 100px;
   //display: inline-block;
 }
+
 .icon_show {
   display: inline-block;
 }
+
 .progress {
-  height: 30px;
+  height: 43px;
 }
 
 .progress-bar {
-  font-size: 16px;
-  line-height:1.85;
+  font-size: 25px;
+  line-height: 1.85;
 }
 
 .blink {
@@ -193,31 +219,34 @@ body {
 .leftPart {
   width: 60%;
   float: left;
-  line-height:1.85;
+  line-height: 1.85;
 }
+
 .rightPart {
   overflow: auto;
   width: 40%;
   float: right;
 }
+
 .rightPart > * {
   overflow: auto;
   float: right;
   margin: 0 15px;
 }
-.gradeContainer{
-  font-size:22px;
+
+.gradeContainer {
+  font-size: 22px;
+}
+
+@media (min-width: 1200px) {
+  /*.row {
+    margin-right: 0;
+    margin-left: 0;
+  }*/
 }
 
 
-@media (min-width: 1200px) {
-   .row {
-     margin-right: 0;
-     margin-left: 0;
-  }
-  
-  
-  }
-
-
-
+/* svg {
+  height: 30% ;
+  width:  40%;
+}*/
