--- a/new webUI/style.css
+++ b/new webUI/style.css
@@ -2,16 +2,23 @@ body{
     color: white;
     font-family: helvetica, sans-serif;
     font-weight: lighter;
-     background:url("https://preview.c9users.io/shahararusi/innojam2015/public/dashboard/images/background.png") no-repeat center center fixed;
+     background:url("background.png") no-repeat center center fixed;
     background-size: cover;
     
 }
 .container{
       margin-top: 20px;
-    width: 100% !important;
+      width: 100% !important;
+      height: 100% !important;
     background-color: rgba(157, 200, 221, 0.32);
 }
 
+.downRow{
+   /* width: 100% !important;*/
+    background-color: rgba(157, 200, 221, 0.32);
+    margin-left:0px;    
+    margin-right:0px;
+}
 .nav{
     position: relative;
    /* background-color: rgba(139, 175, 206, 0);
@@ -49,6 +56,7 @@ body{
 .colText {
       color: #262525;
     text-align: left;
+        font-size: 23px;
 }
 
 .flyover {
